# server/http/httpmodels/token.go
@@ -1,0 +1,10 @@
+package httpmodels
+
+type RefreshTokensRequest struct {
+	RefreshToken string `json:"refreshToken"`
+}
+
+type RefreshTokensResponse struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
